--- a/app/src/main/res/layout/fragment_three_card.xml
+++ b/app/src/main/res/layout/fragment_three_card.xml
@@ -17,32 +17,34 @@
             android:id="@+id/pickACardButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="75dp"
+            android:layout_marginBottom="150dp"
             android:backgroundTint="@color/buttonBrown"
             android:text="@string/lucky"
             android:textColor="@color/Beige"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/howToText" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/howToText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="75dp"
+            android:layout_marginTop="100dp"
             android:text="@string/pick_a_card_text"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="#000000"
+            app:layout_constraintBottom_toTopOf="@+id/pickACardButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:layout_constraintVertical_bias="0.0" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="175dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
