--- a/app/src/main/res/layout/fragment_five_card.xml
+++ b/app/src/main/res/layout/fragment_five_card.xml
@@ -17,7 +17,7 @@
             android:id="@+id/pickACardButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="150dp"
+            android:layout_marginBottom="156dp"
             android:backgroundTint="@color/buttonBrown"
             android:text="@string/lucky"
             android:textColor="@color/Beige"
@@ -30,7 +30,7 @@
             android:id="@+id/howToText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="48dp"
             android:text="@string/pick_a_card_text"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="#000000"
@@ -42,6 +42,7 @@
             android:id="@+id/linearLayoutAllTogether"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/howToText"
             app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +52,7 @@
             <ImageView
                 android:id="@+id/cardImage4"
                 android:layout_width="85dp"
-                android:layout_height="150dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/lovegoth" />
 
@@ -59,33 +60,35 @@
                 android:id="@+id/linearLayout3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="32dp"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/cardImage2"
                     android:layout_width="85dp"
-                    android:layout_height="150dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_height="100dp"
+                    android:layout_marginRight="24dp"
                     android:src="@drawable/lovegoth" />
 
                 <ImageView
                     android:id="@+id/cardImage1"
                     android:layout_width="85dp"
-                    android:layout_height="150dp"
+                    android:layout_height="100dp"
                     android:src="@drawable/lovegoth" />
 
                 <ImageView
                     android:id="@+id/cardImage3"
                     android:layout_width="85dp"
-                    android:layout_height="150dp"
-                    android:layout_marginLeft="20dp"
+                    android:layout_height="100dp"
+                    android:layout_marginLeft="24dp"
                     android:src="@drawable/lovegoth" />
             </LinearLayout>
 
             <ImageView
                 android:id="@+id/cardImage5"
                 android:layout_width="85dp"
-                android:layout_height="150dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/lovegoth" />
 
