--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="backgroundBeige">#8F8B80</color>
-    <color name="buttonBrown">#5E514B</color>
+    <color name="backgroundBeige">#CACEE6</color>
+    <color name="buttonBrown">#788eec</color>
     <color name="Beige">#fff2e2</color>
+    <color name="TextColor">#475C6E</color>
 </resources>
