--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
              xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homePageFragment">
+    app:startDestination="@id/home">
 
     <fragment
         android:id="@+id/threeCardFragment"
@@ -42,7 +42,7 @@
             app:destination="@id/themeOfTarotFragment" />
     </fragment>
     <fragment
-        android:id="@+id/homePageFragment"
+        android:id="@+id/home"
         android:name="com.leys.arcana.HomePageFragment"
         android:label="fragment_home_page"
         tools:layout="@layout/fragment_home_page" >
@@ -65,6 +65,7 @@
             android:id="@+id/action_homePageFragment_to_horseShoeFragment"
             app:destination="@id/horseShoeFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/horseShoeFragment"
         android:name="com.leys.arcana.HorseShoeFragment"
@@ -91,4 +92,21 @@
             android:name="howManyCards"
             app:argType="integer" />
     </fragment>
+    <fragment
+        android:id="@+id/history"
+        android:name="com.leys.arcana.HistoryFragment"
+        android:label="fragment_history"
+        tools:layout="@layout/fragment_history" />
+    <fragment
+        android:id="@+id/profile"
+        android:name="com.leys.arcana.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
+
+    <fragment
+        android:id="@+id/settings"
+        android:name="com.leys.arcana.SettingsFragment"
+        android:label="fragment_settings"
+        tools:layout="@layout/fragment_settings" />
+
 </navigation>
